2006-12-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Tweaked comment.

	* src/libcommon/munge_defs.h:
	  Renamed MUNGE_GROUP_PARSE_TIMER to MUNGE_GROUP_UPDATE_TIMER.
	* src/munged/conf.c (create_conf):
	  Changed MUNGE_GROUP_PARSE_TIMER to MUNGE_GROUP_UPDATE_TIMER.

	* src/munged/munged.c (main): Moved handle_signals() to after
	  daemonize_init().
	* src/munged/munged.c (hup_handler): Added to invoke gids_update().
	* src/munged/gids.h: Changed prototype for gids_create().
	  Added gids_update().
	* src/munged/gids.c (gids_create): Initialized timer, interval, and
	  do_group_stat vars that were added to struct gids.
	* src/munged/gids.c (gids_update): Added public function to schedule
	  an immediate update.
	* src/munged/gids.c (_gids_update): Set do_group_stat flag to -1 on
	  stat() error, and resurrect it in gids_update() if enabled.
	* src/munged/conf.c (create_conf): Set conf flags via "!!" to ensure
	  proper boolean coversions.
	* src/munged/munged.8.in: Documented signals.
	* src/libcommon/munge_defs.h: Tweaked MUNGE_GROUP_STAT_FLAG docs.

2006-12-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c: Added caching of uids from getpwnam().
	* src/munged/gids.h: Added UIDS_HASH_SIZE define.

	* : Added support for supplemental group info to be computed only once
	    or never.
	* src/libcommon/munge_defs.h:
	  Changed MUNGE_GROUP_PARSE_TIMER from 900 seconds to 3600 seconds.
	* src/munged/conf.h: Added gids_interval to struct conf.
	* src/munged/conf.c (create_conf): Initialized gids & gids_interval.
	* src/munged/gids.h: Tweaked gids_create() documentation.
	* src/munged/gids.c: Added support for GIDs mapping to be computed
	  only once if interval=0, and skipped altogether if interval=-1.

2006-12-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/log.c (log_err, log_errno): Replaced magic number 1024
	  with LOG_BUFFER_MAXLEN define.

	* src/munged/munged.c (daemonize_init): Disabled "daemonize" pipe in