@@ -83,22 +83,31 @@ Specify an alternate directory in which the daemon will create the pipe used to
 authenticate clients.  The recommended permissions for this directory are 0711.
 This option is only valid on platforms where client authentication is performed
 via a file-descriptor passing mechanism.
-This option will be removed once configuration file support is added.
 .TP
 .BI "--auth-client-dir " directory
 Specify an alternate directory in which clients will create the file used to
 authenticate themselves to the daemon.  The recommended permissions for this
 directory are 1733.  This option is only valid on platforms where client
 authentication is performed via a file-descriptor passing mechanism.
-This option will be removed once configuration file support is added.
+.TP
+.BI "--check-group-mtime " boolean
+Specify whether the modification time of \fI/etc/group\fR should be checked
+before updating the supplementary group membership mapping.  If this value is
+non-zero, the check will be enabled and the mapping will not be updated unless
+the file has been modified since the last update.
+.TP
+.BI "--group-update-time " integer
+Specify the number of seconds between updates to the supplementary group
+membership mapping; this mapping is used when restricting credentials by GID.
+A value of 0 causes this mapping to be computed initially but never updated
+(unless by a \fBSIGHUP\fR).  A value of \-1 causes this mapping to be disabled
+altogether.
 .TP
 .BI "--key-file " file
 Specify an alternate secret key file.
-This option will be removed once configuration file support is added.
 .TP
 .BI "--num-threads " integer
 Specify the number of threads to spawn for processing credential requests.
-This option will be removed once configuration file support is added.
 
 .SH SIGNALS
 .TP
